新增接口复制测试用例
